--- a/projects/morfin/project.css
+++ b/projects/morfin/project.css
@@ -104,7 +104,7 @@ body {
   font-weight: normal;
   font-style: normal;
   font-size: 150px;
-  display: inline-block;
+  display: block;
   line-height: 80%;
 }
 
