--- a/projects/nuqun/project.css
+++ b/projects/nuqun/project.css
@@ -38,7 +38,6 @@ body {
   font-weight: normal;
   font-style: normal;
   font-size: 150px;
-  display: inline-block;
   line-height: 70%;
 }
 
